# a_star_rust

./: Cargo.toml  index.js
src/: a_star.rs  index.html  index.js  main.rs
